[package]
name = "ats_cv"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
telemetry = ["std"]
std = ["cam-geom", "serde", "serde_json", "simba", "sqpnp", "cv", "eskf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32.3", default-features = false, features = [ "libm", "macros", "serde-serialize" ] }
num = { version = "0.4.1", default-features = false, features = [ "libm" ] }
opencv-ros-camera = { version = "0.14.1", default-features = false }
cam-geom = { version = "0.14.1", optional = true }
sqpnp = { git = "https://github.com/0e4ef622/sqpnp.git", branch="f32", optional = true }
serde = { version = "1.0.198", features = [ "derive" ], optional = true }
serde_json = { version = "1.0.116", optional = true }
simba = { version = "0.8.1", optional = true }
arrayvec = { version = "0.7.4", default-features = false }
cv = { version = "0.6.0", default-features = false, features = ["cv-pinhole", "lambda-twist"], optional = true }
eskf = { path = "../eskf", optional = true }
microfft = "0.6.0"
